--- a/src/templates/R/05a_tqyp.html
+++ b/src/templates/R/05a_tqyp.html
@@ -73,28 +73,29 @@
                     </select>
                 </div>
             </div>
+
+            <input type="hidden" id="str3e" name="str3e" />
+
             <div class="divclass mt-6">
                 <div>STR4. {{T0012}}</div>
                 <div>
-                    <div>
-                        <select id="str4" name="str4" class="selectclass">
-                            <option value="-9">--</option>
-                            <optgroup label="{{T0013}}">
-                                <option value="{{str4-1}}">{{T0014}}</option>
-                                <option value="{{str4-2}}">{{T0015}}</option>
-                                <option value="{{str4-3}}">{{T0016}}</option>
-                                <option value="{{str4-4}}">{{T0017}}</option>
-                            </optgroup>
-                            <optgroup label="{{T0018}}">
-                                <option value="{{str4-5}}">{{T0019}}</option>
-                                <option value="{{str4-6}}">{{T0020}}</option>
-                                <option value="{{str4-7}}">{{T0021}}</option>
-                                <option value="{{str4-8}}">{{T0022}}</option>
-                                <option value="{{str4-9}}">{{T0023}}</option>
-                                <option value="{{str4-10}}">{{T0024}}</option>
-                            </optgroup>
-                        </select>
-                    </div>
+                    <select id="str4" name="str4" class="selectclass">
+                        <option value="-9">--</option>
+                        <optgroup label="{{T0013}}">
+                            <option value="{{str4-1}}">{{T0014}}</option>
+                            <option value="{{str4-2}}">{{T0015}}</option>
+                            <option value="{{str4-3}}">{{T0016}}</option>
+                            <option value="{{str4-4}}">{{T0017}}</option>
+                        </optgroup>
+                        <optgroup label="{{T0018}}">
+                            <option value="{{str4-5}}">{{T0019}}</option>
+                            <option value="{{str4-6}}">{{T0020}}</option>
+                            <option value="{{str4-7}}">{{T0021}}</option>
+                            <option value="{{str4-8}}">{{T0022}}</option>
+                            <option value="{{str4-9}}">{{T0023}}</option>
+                            <option value="{{str4-10}}">{{T0024}}</option>
+                        </optgroup>
+                    </select>
                 </div>
             </div>
 
@@ -395,6 +396,13 @@
             </div>
 
             <p class="mt-10 bg-gray-200 px-2 py-1"><strong>{{T0085}}</strong></p>
+
+            <div class="divclass mt-6">
+                <div>{{T0090}}. {{T0091}}</div>
+                <div class="flex gap-4">
+                    <textarea id="cr10" name="cr10" class="inputclass w-full"></textarea>
+                </div>
+            </div>
 
         </form>
 
