--- a/src/templates/R/04_qmr.html
+++ b/src/templates/R/04_qmr.html
@@ -1960,12 +1960,12 @@
             <table class="w-full mt-6" aria-label="{{T0488}}">
                 <tbody>
                     <tr class="border-b">
-                        <th class="p-2 text-left">{{T0487}}. {{T0488}}</th>
-                        <th class="p-2">{{T0489}}</th>
-                        <th class="p-2">{{T0490}}</th>
-                        <th class="p-2">{{T0491}}</th>
-                        <th class="p-2">{{T0492}}</th>
-                        <th class="p-2">{{T0493}}</th>
+                        <td class="text-left">{{T0487}}. {{T0488}}</td>
+                        <td class="text-center p-1">{{T0489}}</td>
+                        <td class="text-center p-1">{{T0490}}</td>
+                        <td class="text-center p-1">{{T0491}}</td>
+                        <td class="text-center p-1">{{T0492}}</td>
+                        <td class="text-center p-1">{{T0493}}</td>
                     </tr>
                     <tr>
                         <td>{{T0494}}</td>
@@ -2168,106 +2168,51 @@
 
             <p class="mt-6">{{T0544}}. {{T0545}}</p>
             <small class="italic mt-2">{{T0546}}</small>
-            <div class="divclass mt-6">
-                <div class="col-span-1 ml-4">{{T0547}}</div>
-                <div class="div4class">
-                    <div class="flex items-center">
-                        <input id="rce4a-1" type="radio" value="{{rce4a-1}}" name="rce4a" class="valueclass">
-                        <label for="rce4a-1" class="labelclass">1</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4a-2" type="radio" value="{{rce4a-2}}" name="rce4a" class="valueclass">
-                        <label for="rce4a-2" class="labelclass">2</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4a-3" type="radio" value="{{rce4a-3}}" name="rce4a" class="valueclass">
-                        <label for="rce4a-3" class="labelclass">3</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4a-4" type="radio" value="{{rce4a-4}}" name="rce4a" class="valueclass">
-                        <label for="rce4a-4" class="labelclass">4</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4a-5" type="radio" value="{{rce4a-5}}" name="rce4a" class="valueclass">
-                        <label for="rce4a-5" class="labelclass">5</label>
-                    </div>
-                </div>
-            </div>
-            <div class="divclass mt-6">
-                <div class="col-span-1 ml-4">{{T0548}}</div>
-                <div class="div4class">
-                    <div class="flex items-center">
-                        <input id="rce4b-1" type="radio" value="{{rce4b-1}}" name="rce4b" class="valueclass">
-                        <label for="rce4b-1" class="labelclass">1</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4b-2" type="radio" value="{{rce4b-2}}" name="rce4b" class="valueclass">
-                        <label for="rce4b-2" class="labelclass">2</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4b-3" type="radio" value="{{rce4b-3}}" name="rce4b" class="valueclass">
-                        <label for="rce4b-3" class="labelclass">3</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4b-4" type="radio" value="{{rce4b-4}}" name="rce4b" class="valueclass">
-                        <label for="rce4b-4" class="labelclass">4</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4b-5" type="radio" value="{{rce4b-5}}" name="rce4b" class="valueclass">
-                        <label for="rce4b-5" class="labelclass">5</label>
-                    </div>
-                </div>
-            </div>
-            <div class="divclass mt-6">
-                <div class="col-span-1 ml-4">{{T0549}}</div>
-                <div class="div4class">
-                    <div class="flex items-center">
-                        <input id="rce4c-1" type="radio" value="{{rce4c-1}}" name="rce4c" class="valueclass">
-                        <label for="rce4c-1" class="labelclass">1</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4c-2" type="radio" value="{{rce4c-2}}" name="rce4c" class="valueclass">
-                        <label for="rce4c-2" class="labelclass">2</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4c-3" type="radio" value="{{rce4c-3}}" name="rce4c" class="valueclass">
-                        <label for="rce4c-3" class="labelclass">3</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4c-4" type="radio" value="{{rce4c-4}}" name="rce4c" class="valueclass">
-                        <label for="rce4c-4" class="labelclass">4</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4c-5" type="radio" value="{{rce4c-5}}" name="rce4c" class="valueclass">
-                        <label for="rce4c-5" class="labelclass">5</label>
-                    </div>
-                </div>
-            </div>
-            <div class="divclass mt-6">
-                <div class="col-span-1 ml-4">{{T0550}}</div>
-                <div class="div4class">
-                    <div class="flex items-center">
-                        <input id="rce4d-1" type="radio" value="{{rce4d-1}}" name="rce4d" class="valueclass">
-                        <label for="rce4d-1" class="labelclass">1</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4d-2" type="radio" value="{{rce4d-2}}" name="rce4d" class="valueclass">
-                        <label for="rce4d-2" class="labelclass">2</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4d-3" type="radio" value="{{rce4d-3}}" name="rce4d" class="valueclass">
-                        <label for="rce4d-3" class="labelclass">3</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4d-4" type="radio" value="{{rce4d-4}}" name="rce4d" class="valueclass">
-                        <label for="rce4d-4" class="labelclass">4</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="rce4d-5" type="radio" value="{{rce4d-5}}" name="rce4d" class="valueclass">
-                        <label for="rce4d-5" class="labelclass">5</label>
-                    </div>
-                </div>
-            </div>
+            <table class="w-full mt-2" aria-label="{{T0195}}. {{T0196}}">
+                <tbody>
+                    <tr>
+                        <td class="text-center w-1/2"></td>
+                        <td class="text-center w-1/10">Very bad<br>1</td>
+                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>2</td>
+                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>3</td>
+                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>4</td>
+                        <td class="text-center w-1/10">Excellent<br>5</td>
+                    </tr>
+                    <tr>
+                        <td class="p-1">{{T0547}}</td>
+                        <td class="p-1 text-center"><input id="rce4a-1" type="radio" value="{{rce4a-1}}" name="rce4a" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4a-2" type="radio" value="{{rce4a-2}}" name="rce4a" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4a-3" type="radio" value="{{rce4a-3}}" name="rce4a" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4a-4" type="radio" value="{{rce4a-4}}" name="rce4a" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4a-5" type="radio" value="{{rce4a-5}}" name="rce4a" class="valueclass"></td>
+                    </tr>
+                    <tr>
+                        <td class="p-1">{{T0548}}</td>
+                        <td class="p-1 text-center"><input id="rce4b-1" type="radio" value="{{rce4b-1}}" name="rce4b" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4b-2" type="radio" value="{{rce4b-2}}" name="rce4b" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4b-3" type="radio" value="{{rce4b-3}}" name="rce4b" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4b-4" type="radio" value="{{rce4b-4}}" name="rce4b" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4b-5" type="radio" value="{{rce4b-5}}" name="rce4b" class="valueclass"></td>
+                    </tr>
+                    <tr>
+                        <td class="p-1">{{T0549}}</td>
+                        <td class="p-1 text-center"><input id="rce4c-1" type="radio" value="{{rce4c-1}}" name="rce4c" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4c-2" type="radio" value="{{rce4c-2}}" name="rce4c" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4c-3" type="radio" value="{{rce4c-3}}" name="rce4c" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4c-4" type="radio" value="{{rce4c-4}}" name="rce4c" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4c-5" type="radio" value="{{rce4c-5}}" name="rce4c" class="valueclass"></td>
+                    </tr>
+                    <tr>
+                        <td class="p-1">{{T0550}}</td>
+                        <td class="p-1 text-center"><input id="rce4d-1" type="radio" value="{{rce4d-1}}" name="rce4d" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4d-2" type="radio" value="{{rce4d-2}}" name="rce4d" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4d-3" type="radio" value="{{rce4d-3}}" name="rce4d" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4d-4" type="radio" value="{{rce4d-4}}" name="rce4d" class="valueclass"></td>
+                        <td class="p-1 text-center"><input id="rce4d-5" type="radio" value="{{rce4d-5}}" name="rce4d" class="valueclass"></td>
+                    </tr>
+                </tbody>
+            </table>
+
             <div class="divclass mt-10">
                 <div class="col-span-1">
                     {{T0551}}. {{T0552}}
@@ -2393,12 +2338,19 @@
 
             <table class="w-full mt-6" aria-label="{{T0586}}">
                 <tbody>
-                    <tr class="border-b">
-                        <td class="p-2 align-bottom text-left" rowspan="2" scope="col">{{T0585}}. {{T0586}}</td>
-                        <td class="p-2 text-center align-bottom" rowspan="2" scope="col">{{T0587}}</td>
-                        <td class="p-2 text-center align-bottom" rowspan="2" scope="col">{{T0588}}</td>
-                        <td class="px-4 py-2 align-bottom" rowspan="2" scope="col">{{T0589}}</td>
+                    <trb">
+                        <td class="p-2 align-bottom text-left" rowspan="3" scope="col">{{T0585}}. {{T0586}}</td>
+                        <td class="p-2 text-center align-bottom" rowspan="3" scope="col">{{T0587}}</td>
+                        <td class="p-2 text-center align-bottom" rowspan="3" scope="col">{{T0588}}</td>
+                        <td class="p-2 text-center align-bottom" rowspan="3" scope="col"><span class="text-white">dedicated</span><br>{{T0589}}</td>
                         <td class="p-2 text-center align-bottom text-left border-l" scope="col" colspan="5">{{T0600}}. {{T0601}}</td>
+                    </tr>
+                    <tr class="border-b">
+                        <td class="p-2 text-center border-l" scope="col">{{T0765}}</td>
+                        <td class="p-2 text-center" scope="col"><span class="text-white">Very ba</span></td>
+                        <td class="p-2 text-center" scope="col"><span class="text-white">Very ba</span></td>
+                        <td class="p-2 text-center" scope="col"><span class="text-white">Very ba</span></td>
+                        <td class="p-2 text-center" scope="col">{{T0766}}</td>
                     </tr>
                     <tr class="border-b">
                         <td class="p-2 text-center border-l" scope="col">1</td>
