--- a/src/templates/R/07_ftch.html
+++ b/src/templates/R/07_ftch.html
@@ -1638,7 +1638,7 @@
                     <tr class="border-b">
                         <th class="p-2"></th>
                         <th class="w-40 p-2">{{T0209}}</th>
-                        <th class="p-2">{{T0210}}<small class="smallclass">{{T0274}}</small></th>
+                        <th class="p-2">{{T0210}}<br><small class="smallclass">{{T0274}}</small></th>
                         <th class="w-52 p-2">{{T0211}}</th>
                         <th class="p-2">{{T0212}}</th>
                     </tr>
