--- a/src/templates/R/03_csr.html
+++ b/src/templates/R/03_csr.html
@@ -504,7 +504,7 @@
             <div class="divclass mt-6">
                 <div>{{T0154}}. {{T0155}}</div>
                 <div class="flex items-center gap-4">
-                    <input type="text" id="e15" name="e15" class="inputclass w-full" /> UZS
+                    <input type="text" id="e15" name="e15" class="inputclass w-full" /> {{T0185}}
                 </div>
             </div>
 
