--- a/src/templates/R/02_cibs.html
+++ b/src/templates/R/02_cibs.html
@@ -417,6 +417,8 @@
 
             <input type="hidden" id="sa3d" name="sa3d" />
 
+            <p class="mt-10">{{T0132}}. {{T0133}}</p>
+
             <div class="divclass mt-6">
                 <div>SA5r. {{T0067}}</div>
                 <div>
@@ -456,27 +458,33 @@
                 <div>
                     <select id="sa5t" name="sa5t" class="selectclass">
                         <option value="-9">{{T1337}}</option>
-                        <option value="{{sa5t-1}}">{{T1343}}</option>
-                        <option value="{{sa5t-2}}">{{T1344}}</option>
-                        <option value="{{sa5t-3}}">{{T1345}}</option>
-                        <option value="{{sa5t-4}}">{{T1346}}</option>
-                        <option value="{{sa5t-5}}">{{T1347}}</option>
-                        <option value="{{sa5t-6}}">{{T1348}}</option>
-                        <option value="{{sa5t-7}}">{{T1349}}</option>
-                        <option value="{{sa5t-8}}">{{T1350}}</option>
-                        <option value="{{sa5t-9}}">{{T1351}}</option>
-                        <option value="{{sa5t-10}}">{{T1352}}</option>
-                        <option value="{{sa5t-11}}">{{T1353}}</option>
-                        <option value="{{sa5t-12}}">{{T1354}}</option>
-                        <option value="{{sa5t-13}}">{{T1355}}</option>
-                        <option value="{{sa5t-14}}">{{T1356}}</option>
-                        <option value="{{sa5t-15}}">{{T1357}}</option>
-                        <option value="{{sa5t-16}}">{{T1358}}</option>
-                        <option value="{{sa5t-17}}">{{T1359}}</option>
-                        <option value="{{sa5t-18}}">{{T1360}}</option>
-                        <option value="{{sa5t-19}}">{{T1361}}</option>
-                        <option value="{{sa5t-20}}">{{T1362}}</option>
-                        <option value="{{sa5t-21}}">{{T1363}}</option>
+                        <optgroup label="{{T1371}}">
+                            <option value="{{sa5t-1}}">{{T1343}}</option>
+                            <option value="{{sa5t-2}}">{{T1344}}</option>
+                            <option value="{{sa5t-3}}">{{T1345}}</option>
+                            <option value="{{sa5t-4}}">{{T1346}}</option>
+                            <option value="{{sa5t-5}}">{{T1347}}</option>
+                            <option value="{{sa5t-6}}">{{T1348}}</option>
+                            <option value="{{sa5t-7}}">{{T1349}}</option>
+                        </optgroup>
+                        <optgroup label="{{T1372}}">
+                            <option value="{{sa5t-8}}">{{T1350}}</option>
+                            <option value="{{sa5t-9}}">{{T1351}}</option>
+                            <option value="{{sa5t-10}}">{{T1352}}</option>
+                            <option value="{{sa5t-11}}">{{T1353}}</option>
+                            <option value="{{sa5t-12}}">{{T1354}}</option>
+                            <option value="{{sa5t-13}}">{{T1355}}</option>
+                            <option value="{{sa5t-14}}">{{T1356}}</option>
+                            <option value="{{sa5t-15}}">{{T1357}}</option>
+                        </optgroup>
+                        <optgroup label="{{T1373}}">
+                            <option value="{{sa5t-16}}">{{T1358}}</option>
+                            <option value="{{sa5t-17}}">{{T1359}}</option>
+                            <option value="{{sa5t-18}}">{{T1360}}</option>
+                            <option value="{{sa5t-19}}">{{T1361}}</option>
+                            <option value="{{sa5t-20}}">{{T1362}}</option>
+                            <option value="{{sa5t-21}}">{{T1363}}</option>
+                        </optgroup>
                     </select>
                 </div>
             </div>
@@ -873,19 +881,19 @@
                     </div>
                     <div class="centerflex">
                         <input id="cm7b-4" type="radio" value="{{cm7b-4}}" name="cm7b" class="valueclass">
-                        <label for="cm7b-4" class="labelclass">{{T0268}}</label>
+                        <label for="cm7b-4" class="labelclass">{{T0267}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="cm7b-5" type="radio" value="{{cm7b-5}}" name="cm7b" class="valueclass">
-                        <label for="cm7b-5" class="labelclass">{{T0267}}</label>
+                        <label for="cm7b-5" class="labelclass">{{T0268}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="cm7b-6" type="radio" value="{{cm7b-6}}" name="cm7b" class="valueclass">
-                        <label for="cm7b-6" class="labelclass">{{T0270}}</label>
+                        <label for="cm7b-6" class="labelclass">{{T0269}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="cm7b-7" type="radio" value="{{cm7b-7}}" name="cm7b" class="valueclass">
-                        <label for="cm7b-7" class="labelclass">{{T0269}}</label>
+                        <label for="cm7b-7" class="labelclass">{{T0270}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="cm7b-9" type="radio" value="{{cm7b-8}}" name="cm7b" class="valueclass">
@@ -1218,7 +1226,7 @@
                 <div>CT3a. {{T0212}}</div>
                 <div class="flex items-center">
                     <input type="checkbox" id="ct3a_out" name="ct3a_out" value="{{ct3a_out-1}}" class="cbclass">
-                    <label for="ct3a_out" class="labelclass">{{T1339}}</label>
+                    <label for="ct3a_out" class="labelclass">{{T1340}}</label>
                 </div>
                 <div></div>
                 <div class="flex items-center">
@@ -1384,19 +1392,19 @@
                     </div>
                     <div class="centerflex">
                         <input id="ct7b-4" type="radio" value="{{ct7b-4}}" name="ct7b" class="valueclass">
-                        <label for="ct7b-4" class="labelclass">{{T0404}}</label>
+                        <label for="ct7b-4" class="labelclass">{{T0403}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="ct7b-5" type="radio" value="{{ct7b-5}}" name="ct7b" class="valueclass">
-                        <label for="ct7b-5" class="labelclass">{{T0403}}</label>
+                        <label for="ct7b-5" class="labelclass">{{T0404}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="ct7b-6" type="radio" value="{{ct7b-6}}" name="ct7b" class="valueclass">
-                        <label for="ct7b-6" class="labelclass">{{T0406}}</label>
+                        <label for="ct7b-6" class="labelclass">{{T0405}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="ct7b-7" type="radio" value="{{ct7b-7}}" name="ct7b" class="valueclass">
-                        <label for="ct7b-7" class="labelclass">{{T0405}}</label>
+                        <label for="ct7b-7" class="labelclass">{{T0406}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="ct7b-9" type="radio" value="{{ct7b-8}}" name="ct7b" class="valueclass">
@@ -1866,19 +1874,19 @@
                     </div>
                     <div class="centerflex">
                         <input id="cg7b-4" type="radio" value="{{cg7b-4}}" name="cg7b" class="valueclass">
-                        <label for="cg7b-4" class="labelclass">{{T0542}}</label>
+                        <label for="cg7b-4" class="labelclass">{{T0541}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="cg7b-5" type="radio" value="{{cg7b-5}}" name="cg7b" class="valueclass">
-                        <label for="cg7b-5" class="labelclass">{{T0541}}</label>
+                        <label for="cg7b-5" class="labelclass">{{T0542}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="cg7b-6" type="radio" value="{{cg7b-6}}" name="cg7b" class="valueclass">
-                        <label for="cg7b-6" class="labelclass">{{T0544}}</label>
+                        <label for="cg7b-6" class="labelclass">{{T0543}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="cg7b-7" type="radio" value="{{cg7b-7}}" name="cg7b" class="valueclass">
-                        <label for="cg7b-7" class="labelclass">{{T0543}}</label>
+                        <label for="cg7b-7" class="labelclass">{{T0544}}</label>
                     </div>
                     <div class="centerflex">
                         <input id="cg7b-9" type="radio" value="{{cg7b-8}}" name="cg7b" class="valueclass">
@@ -2283,7 +2291,7 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T0639}}<small class="mb-1 smallclass">{{T0640}}</small></div>
+                <div>{{T0639}}</div>
                 <div>
                     <select id="qeduc2b" name="qeduc2b" class="selectclass">
                         <option value="-9">{{T1337}}</option>
@@ -3149,7 +3157,7 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T0824}}. {{T0825}}<small class="smallclass">{{T0640}}</small></div>
+                <div>{{T0824}}. {{T0825}}</div>
                 <div>
                     <select id="sch2" name="sch2" class="selectclass">
                         <option value="-9">{{T1337}}</option>
