--- a/src/templates/R/08_pfq.html
+++ b/src/templates/R/08_pfq.html
@@ -360,7 +360,7 @@
             <h2 class="h2class">{{T0102}}</h2>
 
 
-            <p id=fc4text" class="hidden mt-6">{{T0103}}. {{T0104}}</p>
+            <p id="fc4text" class="hidden mt-6">{{T0103}}. {{T0104}}</p>
 
 
             <div id="c1a" class="hidden divclass mt-10">
@@ -1489,7 +1489,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr id="c1row" class="hidden">
                         <td class="p-2">{{T0156}}</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1535,7 +1535,7 @@
                             <input type="text" id="ex3_c1d_other" name="ex3_c1d_other" class="bg-white selectclass" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c2row" class="hidden">
                         <td class="p-2">{{T0157}}</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1581,7 +1581,7 @@
                             <input type="text" id="ex3_c2d_other" name="ex3_c2d_other" class="bg-white selectclass" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c3row" class="hidden">
                         <td class="p-2">{{T0158}}</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1627,7 +1627,7 @@
                             <input type="text" id="ex3_c3d_other" name="ex3_c3d_other" class="bg-white selectclass" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c4row" class="hidden">
                         <td class="p-2">{{T0159}}</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1673,7 +1673,7 @@
                             <input type="text" id="ex3_c4d_other" name="ex3_c4d_other" class="bg-white selectclass" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c5row" class="hidden">
                         <td class="p-2">{{T0160}}</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1719,7 +1719,7 @@
                             <input type="text" id="ex3_c5d_other" name="ex3_c5d_other" class="bg-white selectclass" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c6row" class="hidden">
                         <td class="p-2">{{T0161}}</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1765,7 +1765,7 @@
                             <input type="text" id="ex3_c6d_other" name="ex3_c6d_other" class="bg-white selectclass" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c7row" class="hidden">
                         <td class="p-2">{{T0162}}</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1811,7 +1811,7 @@
                             <input type="text" id="ex3_c7d_other" name="ex3_c7d_other" class="bg-white selectclass" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c8row" class="hidden">
                         <td class="p-2">{{T0163}}</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1857,7 +1857,7 @@
                             <input type="text" id="ex3_c8d_other" name="ex3_c8d_other" class="bg-white selectclass" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c9row" class="hidden">
                         <td class="p-2">{{T0164}}</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
@@ -1903,7 +1903,7 @@
                             <input type="text" id="ex3_c9d_other" name="ex3_c9d_other" class="bg-white selectclass" />
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="c10row" class="hidden">
                         <td class="p-2">{{T0165}}</td>
                         <td class="p-2">
                             <div class="flex items-center justify-center gap-2">
