--- a/src/templates/R/08_pfq.html
+++ b/src/templates/R/08_pfq.html
@@ -357,8 +357,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T0102}}</h2>
-
+            <h2 id="fc4header" class="h2class">{{T0102}}</h2>
 
             <p id="fc4text" class="hidden mt-6">{{T0103}}. {{T0104}}</p>
 
