hide table header

--- a/src/templates/R/07_ftch.html
+++ b/src/templates/R/07_ftch.html
@@ -1594,7 +1594,7 @@
                 </div>
             </div>
 
-            <div cid="c10f" class="hidden divclass mt-6">
+            <div id="c10f" class="hidden divclass mt-6">
                 <div>{{T0186}} {{T0171}}</div>
                 <div class="div4class">
                     <select id="fc4_c10f" name="fc4_c10f" class="selectclass">
@@ -1632,8 +1632,8 @@
                 </div>
             </div>
 
-            <p class="mt-6">{{T0207}}. {{T0208}}</p>
-            <table class="w-full mt-6" aria-label="{{T0208}}">
+            <p id="ex3text" class="hidden mt-6">{{T0207}}. {{T0208}}</p>
+            <table id="ex3table" class="hidden w-full mt-6" aria-label="{{T0208}}">
                 <thead>
                     <tr class="border-b">
                         <th class="p-2"></th>
